提交遗漏修改

--- a/apps/home/config/config.ini
+++ b/apps/home/config/config.ini
@@ -9,4 +9,4 @@ dbname   = baby
 controllersDir = ../apps/home/controllers/
 modelsDir      = ../apps/home/models/
 viewsDir       = ../apps/home/views/
-baseUri        = /baby/
+baseUri        = /
